--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Recipes</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
         <li><a href="./recipes/fish-curry.html">Fish Curry</a></li>
